# geonode-mapstore-client

./: .gitmodules  package-lock.json  setup.cfg
.github/workflows/: build.yml  test.yml  thuenen-4.1.x-build.yml  thuenen-4.1.x-test.yml  thuenen-build.yml  thuenen-test.yml
docs/: client.md
docs/customizations/: theme.html
geonode_mapstore_client/: apps.py  hooksets.py
geonode_mapstore_client/client/: .env.sample  package.json  version.txt
geonode_mapstore_client/client/js/actions/: gnresource.js
geonode_mapstore_client/client/js/apps/: gn-catalogue.js  gn-tabular-collection.js
geonode_mapstore_client/client/js/epics/: gnresource.js  gnsave.js  index.js  layerdetailviewer.js
geonode_mapstore_client/client/js/plugins/: CollectiveLegend.jsx  DatasetsCatalog.jsx  ExclusiveLayer.jsx  LayerDetailViewer.jsx  LayerSettings.jsx  LayerStyleSelect.jsx  LayerTitleTocLineBreaker.jsx  Legend.jsx  ResourcesGrid.jsx  Save.jsx  SyncResource.jsx  TabularPreview.jsx  VisualStyleEditor.jsx  index.js
geonode_mapstore_client/client/js/reducers/: gndownload.js  (+1 more)
geonode_mapstore_client/static/mapstore/: version.txt
geonode_mapstore_client/templates/: base.html  index.html  page.html
geonode_mapstore_client/templates/documents/: document_embed.html
geonode_mapstore_client/templates/geonode-mapstore-client/: atlas_detail.html  atlas_list.html  catalogue.html  dashboard_embed.html  dataset_embed.html  geostory_embed.html  geostory_resources_page.html  map_embed.html
geonode_mapstore_client/templatetags/: get_menu_json.py  get_tabular_data.py  process_atlas_data.py
(+57 files in other folders)
