[metadata]
name = django-geonode-mapstore-client
description = Use GeoNode client in your django projects
author = Alessio Fabiani
author_email = alessio.fabiani@geo-solutions.it
url = https://github.com/GeoNode/geonode-mapstore-client
download_url = https://github.com/GeoNode/geonode-mapstore-client/tarball/master
keywords = django, mapstore, mapstore2
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
	@@ -21,7 +20,7 @@ classifiers =
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django >= 4.2, < 5.0
    idna >= 2.5, < 2.11
    requests >= 2.13.0
	@@ -37,6 +36,5 @@ universal = 1

[flake8]
max-line-length = 120
exclude=geonode_mapstore_client/*/migrations/*,geonode_mapstore_client/mapstore2_adapter/*/migrations/*,management,scripts,docs,static,migrations,geonode_mapstore_client/mapstore2_adapter/*settings.py
ignore=E121,E122,E124,E126,E226